--- a/public/css/devices.css
+++ b/public/css/devices.css
@@ -99,7 +99,15 @@
     display: none;
     transition: 0.2s;
     z-index: 1;
+    max-height: 10em;
+    overflow-y: auto;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}   
+.menu::-webkit-scrollbar{
+    display: none;
 }
+
 .menu li {
     padding: 0.7em 0.5em;
     margin: 0.3em 0;
@@ -110,12 +118,16 @@
 .menu li:hover {
     background: #303344;
 }
-.active {
+.active-menu {
     background: #23242a;
 }
 .menu-open {
     display: block;
     opacity: 1;
+}
+
+.hidden{
+    display: none;
 }
 
 
@@ -331,7 +343,82 @@
     font-weight: 400;
     font-size: 2vw;
 }
+.main-sec-body{}
+
+.main-tool{
+    background-color: white;
+    border-radius: 0.5em;
+    min-height: 70vh;
+    max-height: 75vh;
+    margin: 0 1.5em 1em 2em;
+    padding: 0.2em;
+    border: #cfd2da 2px solid;
+    display: flex;
+    flex-direction: column;
+}
+
+#myPlotlyChart {
+    width: 100%;
+    height: 100%;
+  }
+
+.main-tool-header{
+    display: flex;
+    margin: 0 1.5em 1em 1em;
+}
+
+.main-tool-board{
+    background-color: white;
+    border-radius: 0.5em;
+    min-height: 45vh;
+    max-height: 65vh;
+    margin: 0 1.5em 1em 2em;
+    padding: 0.2em;
+    border: #cfd2da 2px solid;
+    display: flex;
+    flex-direction: column;
+}
+
+.main-tool-board-header{
+    display: flex;
+    border-bottom: #cfd2da 2px solid;
+    align-items: baseline;
+    padding: 1vw;
+    padding-bottom: 0.75vw;
+}
+
+.main-tool-board-header h2{
+    font-weight: 500;
+    font-size: 1.15vw;
+    padding-right: 0.8em;
+}
 
 
-.main-sec1-body{
+
+.main-tool-board-body {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    height: 50vh; /* Set your desired max height */
+    max-height: 100vh; /* Ensure the container uses the available height */
+    width: 100%; /* Full width of the container */
+    gap: 10px; /* Adjust gap as needed */
+    padding: 0.5vw 1vw;
+    box-sizing: border-box; /* Ensure padding and border are included in the element's total width and height */
+  }
+
+.single-board{
+    display: flex;
+    justify-content: space-between;
+    max-width: 10em;
+}
+
+.single-board p{
+    font-size: 0.75vw;
+    font-weight: 500;
+}
+
+
+.single-board p:last-child{
+    color: green;
 }
