--- a/views/devices.html
+++ b/views/devices.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&amp;display=swap">
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 
 <body>
@@ -91,10 +92,10 @@
         <div class="view-header">
           <div class="view-header-name"></div>
           <div class="view-options" id="viewFilter">
-            <div data-category="Overview"class="view-option view-active">Overview</div>
-            <div data-category="Tool Monitoring"class="view-option">Tool Monitoring</div>
-            <div data-category="Diagnostics"class="view-option">Diagnostics</div>
-            <div data-category="Maintenance"class="view-option">Maintenance</div>
+            <div data-view="Overview" class="view-option view-active">Overview</div>
+            <div data-view="Tool Monitoring" class="view-option">Tool Monitoring</div>
+            <div data-view="Diagnostics" class="view-option">Diagnostics</div>
+            <div data-view="Maintenance" class="view-option">Maintenance</div>
           </div>
         </div>
         <div class="view-main">
