Updates Fixed Bugs

--- a/views/devices.html
+++ b/views/devices.html
@@ -37,13 +37,6 @@
       </li>
       <li>
         <a href="#">
-          <i class='bx bx-pie-chart-alt-2'></i>
-          <span class="links_name">Analytics</span>
-        </a>
-        <span class="tooltip">Analytics</span>
-      </li>
-      <li>
-        <a href="#">
           <i class='bx bx-folder'></i>
           <span class="links_name">File Manager</span>
         </a>
@@ -75,7 +68,7 @@
               <div class="caret"></div>
             </div>
             <ul class="menu" id="categoryFilter">
-              <li data-category="All" class="active">All Machines</li>
+              <li data-category="All" class="active-menu">All Machines</li>
               <li data-category="E Series">E Series</li>
               <li data-category="C Series">C Series</li>
               <li data-category="Schlumberger">Schlumberger</li>
@@ -88,7 +81,7 @@
         <div class="dev-list-wrapper" id="oven-container">
         </div>
       </div>
-      <div class="view-frame">
+      <div class="view-frame" id="style-1">
         <div class="view-header">
           <div class="view-header-name"></div>
           <div class="view-options" id="viewFilter">
