--- a/public/css/devices.css
+++ b/public/css/devices.css
@@ -18,11 +18,29 @@
     display: flex;
     flex-direction: column;
     overflow-y: auto;
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
 }   
-.view-frame::-webkit-scrollbar{
-    display: none;
+
+#style-1::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(182, 182, 182, 0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+    cursor: pointer;
+}
+
+#style-1::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #F5F5F5;
+    cursor: pointer;
+}
+
+#style-1::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(182, 182, 182, 0.3);
+	background-color: #9c9c9c;
+    cursor: pointer;
 }
 
 .dev-dropdown-wrapper{
