--- a/views/devices.html
+++ b/views/devices.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&amp;display=swap">
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <script src="js/daypilot-all.min.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -22,21 +23,21 @@
     </div>
     <ul class="nav-list">
       <li>
-        <a href="#">
+        <a href="/">
           <i class='bx bx-grid-alt'></i>
           <span class="links_name">Dashboard</span>
         </a>
         <span class="tooltip">Dashboard</span>
       </li>
       <li>
-        <a href="#">
+        <a href="/devices">
           <i class='bx bx-devices'></i>
           <span class="links_name">Devices</span>
         </a>
         <span class="tooltip">Devices</span>
       </li>
       <li>
-        <a href="#">
+        <a href="/fileManager">
           <i class='bx bx-folder'></i>
           <span class="links_name">File Manager</span>
         </a>
