--- a/views/filelog.html
+++ b/views/filelog.html
@@ -28,21 +28,21 @@
     </div>
     <ul class="nav-list">
       <li>
-        <a href="#">
+        <a href="/">
           <i class='bx bx-grid-alt'></i>
           <span class="links_name">Dashboard</span>
         </a>
         <span class="tooltip">Dashboard</span>
       </li>
       <li>
-        <a href="#">
+        <a href="/devices">
           <i class='bx bx-devices'></i>
           <span class="links_name">Devices</span>
         </a>
         <span class="tooltip">Devices</span>
       </li>
       <li>
-        <a href="#">
+        <a href="/fileManager">
           <i class='bx bx-folder'></i>
           <span class="links_name">File Manager</span>
         </a>
