--- a/views/settings.html
+++ b/views/settings.html
@@ -22,13 +22,6 @@
         <ul class="nav-list">
             <li>
                 <a href="/">
-                    <i class='bx bx-grid-alt'></i>
-                    <span class="links_name">Dashboard</span>
-                </a>
-                <span class="tooltip">Dashboard</span>
-            </li>
-            <li>
-                <a href="/devices">
                     <i class='bx bx-devices'></i>
                     <span class="links_name">Devices</span>
                 </a>
@@ -42,14 +35,14 @@
                 <span class="tooltip">Files</span>
             </li>
             <li>
-                <a href="#">
+                <a href="/settings">
                     <i class='bx bx-cog'></i>
                     <span class="links_name">Settings</span>
                 </a>
                 <span class="tooltip">Settings</span>
             </li>
             <li>
-                <a href="#">
+                <a href="/about">
                     <i class='bx bx-info-circle'></i>
                     <span class="links_name">About</span>
                 </a>
